Fix padding in activity  section

--- a/index.css
+++ b/index.css
@@ -198,8 +198,12 @@ nav .logo img {
 .user__balance__activity__box {
     background-color: #49494A;
     flex: 0.45;
-    height: 250px;
     border-radius: 2rem;
+    padding: 0 1rem 2rem 1rem;
+}
+
+.user__balance {
+    height: 250px;
 }
 
 .user__balance__activity__heading {
